Проверены все тесты в рамках тикета ms_054